--- a/style.css
+++ b/style.css
@@ -1,28 +1,47 @@
+.header{
+    width:100%;
+    position: sticky;
+    left: 0;
+    top: 0;
+    background: #fff;
+}
+.head{
+    width:100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 1.2em;
+}
 .head-line{
-    margin-top:1em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.head-line svg{
-    width:430px;
+.head-line img{
+    width:100px;
 }
 .menus{
-    margin-top: 1em;
     display: flex;
     justify-content: center;
     align-items:center;
-    border-top: 1px solid #ebebeb;
-    border-bottom:4px double #222;
+    border-top: 1px solid #eee;
+    border-bottom:1px double #eee;
     flex-wrap:wrap;
+    font-size:16px;
+    position: relative;
 }
 .menus button{
     border:none;
     background:none;
     margin:5px;
 }
-.menus button:hover{
-    background-color:beige;
+.menus_line{
+    position: absolute;
+    bottom:0px;
+    height: 2px;
+    background: #1100D7;
+    
 }
 .news-img-size{
     max-width: 100%;
@@ -32,20 +51,10 @@
     padding: 1.2em 0;
     border-bottom:2px solid #222;
 }
-.headIcon--Wrap{
-    width:100%;
-    padding:1rem 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap:1em;
-}
 .fas{
     font-size:1.2em;
 }
 .searchWrap{
-    position: relative;
-    width: 50%;
     text-align: right;
 }
 /*사이드바*/
@@ -59,7 +68,7 @@
     z-index: 99;
     top: 0;
     left: 0;
-    background-color: burlywood;
+    background-color: #1100D7;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -69,8 +78,9 @@
     border: none;
     background: none;
     width: 120px;
+    color:#fff;
   }
-  
+  #searchInput--Wrap .closebtn,
   .side-menu .closebtn {
     position: absolute;
     top: 0;
@@ -80,11 +90,15 @@
     border: none;
     background: none;
   }
+.side-menu .closebtn{
+    color:#fff;
+  }
   
   .side-menu-list {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border:none;
   }
   
   .side-menu-list button:hover {
@@ -94,19 +108,35 @@
 
   #searchInput--Wrap{
     display: none;
+    position: fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height: 100vh;
+    background-color: rgba(255,255,255,0.9);
+    z-index:999;
+  }
+  .searchLayout{
+    width:70%;
+    height: 40px;
     position: absolute;
-    right:0;
-    top:1.5em;
+    left:50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+    display: flex;
   }
   #searchInput--Wrap input{
-    flex: 1 1 auto;
-    width:100%;
+    flex:1 1 auto;
   }
-  #searchInput--Wrap button{
-    flex:0 0 50px;
-    width:50px;
+  .searchLayout .fa-search{
+    border:none;
+    background: none;
+    font-size:30px;
   }
   @media screen and (max-width: 63rem) {
+    .head{
+        height: 50px;
+    }
     .hide {
       display: inline;
     }
@@ -114,3 +144,11 @@
       display: none;
     }
   }
+
+nav{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    padding: 1.2em 0;
+}
+ 
