디자인 2차 커밋

--- a/style.css
+++ b/style.css
@@ -43,14 +43,6 @@
     background: #1100D7;
     
 }
-.news-img-size{
-    max-width: 100%;
-    max-height: 250px;
-}
-.news{
-    padding: 1.2em 0;
-    border-bottom:2px solid #222;
-}
 .fas{
     font-size:1.2em;
 }
@@ -72,16 +64,16 @@
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-  }
-  .side-menu-list button {
+}
+.side-menu-list button {
     margin: 5px;
     border: none;
     background: none;
     width: 120px;
     color:#fff;
-  }
-  #searchInput--Wrap .closebtn,
-  .side-menu .closebtn {
+}
+#searchInput--Wrap .closebtn,
+.side-menu .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
@@ -89,24 +81,26 @@
     margin-left: 50px;
     border: none;
     background: none;
-  }
+}
 .side-menu .closebtn{
     color:#fff;
-  }
-  
-  .side-menu-list {
+}
+.icon-button{
+    cursor: pointer;
+}  
+.side-menu-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     border:none;
-  }
+    gap:5px;
+}
   
-  .side-menu-list button:hover {
-    background-color: beige;
-    border-radius: 3px;
-  }
+.side-menu-list button:hover {
+    text-decoration: underline;
+}
 
-  #searchInput--Wrap{
+#searchInput--Wrap{
     display: none;
     position: fixed;
     left:0;
@@ -115,8 +109,8 @@
     height: 100vh;
     background-color: rgba(255,255,255,0.9);
     z-index:999;
-  }
-  .searchLayout{
+}
+.searchLayout{
     width:70%;
     height: 40px;
     position: absolute;
@@ -124,31 +118,52 @@
     top:50%;
     transform: translate(-50%, -50%);
     display: flex;
-  }
-  #searchInput--Wrap input{
+}
+#searchInput--Wrap input{
     flex:1 1 auto;
-  }
-  .searchLayout .fa-search{
+}
+.searchLayout .fa-search{
     border:none;
     background: none;
     font-size:30px;
-  }
-  @media screen and (max-width: 63rem) {
+}
+@media screen and (max-width: 63rem) {
     .head{
         height: 50px;
     }
     .hide {
-      display: inline;
+        display: inline;
     }
     .main-menus {
-      display: none;
+        display: none;
     }
-  }
-
+}
+.contain{
+    width:100%;
+    padding: 1em 2em;
+    background:#f7f7f7;
+}
+#news-board{
+    width:100%;
+    max-width:1000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
+    margin:0 auto;
+}
+.news-img-size{
+    max-width: 100%;
+    max-height: 250px;
+}
+.news{
+    padding: 1.2em;
+    background:#fff
+}
 nav{
     width:100%;
     display: flex;
     justify-content: center;
     padding: 1.2em 0;
 }
- 
