--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     left: 0;
     top: 0;
     background: #fff;
+    z-index: 999;
 }
 .head{
     width:100%;
@@ -138,6 +139,9 @@
     .main-menus {
         display: none;
     }
+    .col-lg-8{
+        padding-top:1.2em;
+    }
 }
 .contain{
     width:100%;
@@ -154,13 +158,58 @@
     gap:10px;
     margin:0 auto;
 }
+.news .col-lg-4{
+    position: relative;
+}
+.news .col-lg-4::before{
+    position: relative;
+    width: 100%;
+    padding-top: 76%;
+    content: '';
+    display: block;
+    min-width: 100%;
+}
 .news-img-size{
-    max-width: 100%;
-    max-height: 250px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    object-fit: cover;
+    display: block;
 }
 .news{
+    width:100%;
     padding: 1.2em 1em;
     background:#fff
+}
+.news h2,
+.news p{
+    white-space: normal;
+    text-overflow: ellipsis;
+    word-break: break-all;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    line-height: 1.38;
+    letter-spacing: -0.3px;
+    overflow: hidden;
+    width: 100%;
+}
+.news h2{  
+    font-size: 1.4em;
+    font-weight: 500;
+}
+.news p{
+    font-size: 1em;
+    font-weight: 400;
+}
+.col-lg-8{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 nav{
     width:100%;
@@ -170,4 +219,12 @@ nav{
 }
 .page-item {
     cursor: pointer;
+}
+.page-item.active >.page-link, .page-item .page-link.active{
+    background-color: #222;
+    border-color: #222;
+    color:#fff;
+}
+.page-item .page-link{
+    color: #222;
 }
