--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
     bottom:0px;
     height: 2px;
     background: #1100D7;
-    transition:ease-in-out;
+    transition: 0.4s ease-in-out;
 }
 .fas{
     font-size:1.2em;
